--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,4 +118,6 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 
+    implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
+
 }
